--- a/game/css/custom.css
+++ b/game/css/custom.css
@@ -16,10 +16,75 @@ body {
     background: #445d80;
 }
 
-header {
+main {
     display: flex;
     margin-top: 4vh;
     justify-content: center;
     align-items: center;
     height: 90vh;
 }
+
+.wrapper {
+    color: #586e8d;
+    background: white;
+    border-radius: 10px;
+    font-size: 24px;
+    padding: 20px;
+    width: 600px;
+    text-transform: uppercase;
+    font-weight: lighter;
+    box-shadow: 10px 10px 2px rgba(35, 50, 68, 0.4);
+}
+
+.wrapper h1 {
+    text-align: center;
+    margin-bottom: 40px;
+    border-bottom: 2px solid #f1dc6d;
+    border-top: 2px solid #f1dc6d;
+}
+
+.wrapper form {
+    margin-left: 40px;
+    margin-right: 40px;
+    display: flex;
+    flex-direction: column;
+    height: 20vh;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.wrapper form .field {
+    display: flex;
+    flex-direction: row;
+    justify-content: end;
+    margin-bottom: 20px;
+    width: 90%;;
+}
+
+.wrapper form .button {
+    background: #f1dc6d;
+    font-family: Dreamland;
+    color: #444;
+    font-size: 20px;
+    border: 1px solid #888;
+    border-radius: 10px;
+    width: 200px;
+    box-shadow: 5px 5px 5px #eee;
+}
+
+.wrapper form .button:hover {
+    cursor: pointer;
+}
+
+.wrapper form .field label {
+    text-align: right;
+    margin-right: 10px;
+}
+
+.wrapper form .field input {
+    width: 60%;
+    background: #f1dc6d5e;
+padding-left: 10px;
+    font-size: 16px;
+}
+
