--- a/tableau-de-score/css/custom.css
+++ b/tableau-de-score/css/custom.css
@@ -13,7 +13,7 @@
 body {
     font-family: Dreamland;
     -webkit-font-smoothing: antialiased;
-    background: #445d80;
+    background: #5881a8;
 }
 
 main {
@@ -25,7 +25,7 @@ main {
 }
 
 .wrapper {
-    color: #586e8d;
+    color: #5a6c98;
     background: white;
     min-height: 400px;
     border-radius: 10px;
