--- a/game/css/custom.css
+++ b/game/css/custom.css
@@ -29,11 +29,14 @@ main {
     background: white;
     border-radius: 10px;
     font-size: 24px;
-    padding: 20px;
     width: 600px;
     text-transform: uppercase;
     font-weight: lighter;
     box-shadow: 10px 10px 2px rgba(35, 50, 68, 0.4);
+    overflow: scroll;
+    max-height: 100%;
+    padding: 20px 20px 40px;
+
 }
 
 .wrapper h1 {
@@ -58,11 +61,22 @@ main {
     flex-direction: row;
     justify-content: end;
     margin-bottom: 20px;
-    width: 90%;;
+    width: 90%;
 }
 
 .wrapper form#validation .field {
     justify-content: center;
+}
+
+.wrapper form#validation .field {
+    justify-content: center;
+    flex-direction: column;
+}
+
+.wrapper form#validation .field label {
+    text-align: center;
+    margin-bottom: 10px;
+    margin-right: 0px;
 }
 
 .wrapper form select {
