--- a/tableau-de-score/css/custom.css
+++ b/tableau-de-score/css/custom.css
@@ -30,11 +30,10 @@ main {
     min-height: 400px;
     border-radius: 10px;
     font-size: 24px;
-    padding: 20px;
     width: 600px;
     text-transform: uppercase;
-    font-weight: lighter;
     box-shadow: 10px 10px 2px rgba(35, 50, 68, 0.4);
+    max-height: 100%;
 }
 
 .wrapper h1 {
