--- a/tableau-de-score/css/custom.css
+++ b/tableau-de-score/css/custom.css
@@ -79,3 +79,26 @@ main {
 .wrapper .score.third * {
     color: brown;
 }
+
+#alert-popup {
+    padding: 15px;
+    border-radius: 4px;
+    color: #5a6c98;
+    background: #FFF;
+    position: absolute;
+    z-index: 20000;
+    top: 10px;
+    right: 10px;
+    font-size: 25px;
+    width: 400px;
+    box-shadow: 5px 5px 2px rgba(35, 50, 68, 0.4);
+}
+
+.hidden {
+    transform: translate(600px, 0);
+    transition: all 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+.show {
+    transition: all 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
