--- a/tableau-de-score/css/custom.css
+++ b/tableau-de-score/css/custom.css
@@ -38,7 +38,7 @@ main {
 
 .wrapper h1 {
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 30px;
     color: #f1dc6d;
 }
 
@@ -101,4 +101,20 @@ main {
 
 .show {
     transition: all 500ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+
+#max-tag {
+    font-size: 15px;
+    width: 100%;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.surlign {
+    color: #f1dc6d;
+    margin-left: 4px;
+    margin-right: 4px;
+    /*text-shadow: 2px 0 #000, -2px 0 #000, 0 2px #000, 0 -2px #000, 1px 1px #000, -1px -1px #000, 1px -1px #000, -1px 1px #000;*/
+    text-shadow: 2px 2px 0 #5a6c98, 2px -2px 0 #5a6c98, -2px 2px 0 #5a6c98, -2px -2px 0 #5a6c98, 2px 0px 0 #5a6c98, 0px 2px 0 #5a6c98, -2px 0px 0 #5a6c98, 0px -2px 0 #5a6c98;
 }
